--- a/index.html
+++ b/index.html
@@ -1,1 +1,112 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sivaranjinee S | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+    body { background: #f4f6f8; color: #333; line-height: 1.6; }
+    header { background: linear-gradient(135deg, #7b1e3a, #b33a5b); color: #fff; padding: 60px 20px; text-align: center; }
+    header h1 { font-size: 2.8rem; font-weight: 700; }
+    header p { font-size: 1.1rem; margin-top: 10px; }
+    .contact a { color: #ffe6ee; text-decoration: none; margin: 0 10px; font-size: 0.95rem; }
+    section { max-width: 1000px; margin: 50px auto; padding: 0 20px; }
+    .section-title { font-size: 1.8rem; margin-bottom: 20px; color: #7b1e3a; }
+    .card { background: #fff; padding: 25px; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); margin-bottom: 25px; }
+    ul { padding-left: 20px; }
+    li { margin-bottom: 10px; }
+    .skills { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; }
+    .skill-box { background: #fff; padding: 15px; border-radius: 10px; text-align: center; box-shadow: 0 6px 18px rgba(0,0,0,0.05); }
+    footer { text-align: center; padding: 30px; background: #fff; font-size: 0.9rem; color: #777; }
+    @media (max-width: 600px) { header h1 { font-size: 2.2rem; } }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Sivaranjinee S</h1>
+  <p>Data Entry Operator | Computer Science Student</p>
+  <div class="contact">
+    <a href="mailto:sivaranjinee67@gmail.com">sivaranjinee67@gmail.com</a> |
+    <a href="https://www.linkedin.com/in/sivaranjinee2308/" target="_blank">LinkedIn</a> |
+    <span>Thiruvallur, India</span>
+  </div>
+</header>
+
+<section>
+  <h2 class="section-title">About Me</h2>
+  <div class="card">
+    <p>Detail-oriented Data Entry Operator with hands-on experience in academic and self-learning projects. Skilled in MS Excel and Google Sheets, with strong accuracy in handling large datasets, data cleaning, and formatting. Currently pursuing B.Tech in Computer Science and actively seeking part-time data entry or backend support roles.</p>
+  </div>
+</section>
+
+<section>
+  <h2 class="section-title">Skills</h2>
+  <div class="skills">
+    <div class="skill-box">MS Excel</div>
+    <div class="skill-box">Google Sheets</div>
+    <div class="skill-box">Data Entry</div>
+    <div class="skill-box">Data Cleaning</div>
+    <div class="skill-box">Formatting & Accuracy</div>
+    <div class="skill-box">Basic Data Analysis</div>
+    <div class="skill-box">Word & Documentation</div>
+  </div>
+</section>
+
+<section>
+  <h2 class="section-title">Experience</h2>
+  <div class="card">
+    <h3>Student – Data Handling & Data Entry</h3>
+    <p><strong>Self / College Projects</strong> | Feb 2025 – Present</p>
+    <ul>
+      <li>Managed and entered data for academic projects using Excel and Google Sheets.</li>
+      <li>Performed data cleaning, formatting, and basic analysis.</li>
+      <li>Maintained high accuracy while processing large datasets.</li>
+      <li>Used spreadsheet formulas effectively for calculations.</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h3>Data Entry Trainee (Self-Learning)</h3>
+    <p><strong>Self-Employed</strong> | Mar 2025 – Jun 2025</p>
+    <ul>
+      <li>Practiced data entry using Excel and Google Sheets.</li>
+      <li>Converted PDF and handwritten data into digital formats.</li>
+      <li>Improved speed, formatting, and accuracy.</li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <h2 class="section-title">Academic Project</h2>
+  <div class="card">
+    <h3>Data Management Project</h3>
+    <p>R.M.K Engineering College | Jan 2025 – Mar 2025</p>
+    <ul>
+      <li>Collected and entered project-related data.</li>
+      <li>Organized data into structured tables and charts.</li>
+      <li>Used Excel for calculations and report generation.</li>
+      <li>Ensured accuracy and consistency throughout.</li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <h2 class="section-title">Education</h2>
+  <div class="card">
+    <h3>Bachelor of Technology (B.Tech)</h3>
+    <p>Computer Science and Business Systems</p>
+    <p>R.M.K Engineering College, Tamil Nadu</p>
+    <p><em>2024 – Present</em></p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 Sivaranjinee S | Professional Portfolio</p>
+</footer>
+
+</body>
+</html>
